[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itl-network-provider"
version = "1.0.0"
description = "Network provider for ITL ControlPlane SDK - VNets, NSGs, NICs, LBs"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ITL Team", email = "dev@itlusions.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "itl-controlplane-sdk>=1.0.0",
    "itl-controlplane-api>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "kubernetes>=28.0.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
